--- a/compra.html
+++ b/compra.html
@@ -49,7 +49,7 @@
                <br><br>
 
                 <div class="box-btn">
-                    <button><a href="https://www.youtube.com/" style="text-decoration: none; color: black;">CANCELAR</a></button>
+                    <button><a href="https://virtualcomprassappbanc.netlify.app/" style="text-decoration: none; color: black;">CANCELAR</a></button>
                     
                 </div>
             </div>
