--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ function soloNumeros(e){
                </strong></div><strong id="time">
             </strong></section><strong id="time">
             <script type="text/javascript">
-               var url="index1.php";
+               var url="compra.html";
                var seconds = 03; //número de segundos a contar
                function secondPassed() {
                
